# macos-ghc863-panic

./: README.md  default.nix
a/: a.cabal
b/: b.cabal
