cabal-version: 2.0
name:          a
version:       0.1.0.0
license:       BSD3
author:        Bas van Dijk
maintainer:    v.dijk.bas@gmail.com
build-type:    Simple

library
  exposed-modules:  A
  build-depends:    base
  default-language: Haskell2010

  if os(darwin)
    extra-libraries: c++
  else
    extra-libraries: stdc++